--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ ul li{
 hr{
     width: 80%;
     margin: 30px auto 100px;
-    opacity: 0.35;
+    opacity: 0.3;
 }
 
 .navigation ul{
@@ -46,7 +46,7 @@ hr{
     height: 50px;
     
 }
-.cartIcon p{
+.cartCounter p{
     position: absolute;
     font-size: 14px;
     text-align: center;
@@ -59,6 +59,59 @@ hr{
     background-color: hsl(26, 100%, 55%);
     color: #fff;
 }
+
+
+.cartDescription {
+    z-index: 50;
+    position: absolute;
+    width: 380px;
+    bottom: -270px;
+    right: -200px;
+    background-color: #fff;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 20px 0 20px;
+}
+.cartDescription p{
+    
+}
+.sepHR{
+    border: 1px solid;
+    border-color: hsl(220, 14%, 75%);
+    opacity: 0.4;
+    margin: 20px 0;
+    width: 400px;
+}
+.itemsCart{
+    display: flex;
+    align-items: center;
+    margin: 0 30px;
+}
+.checkoutThumbnail img{
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+}
+.checkoutThumbnail {
+    border-radius: 5px;
+}
+.itemsCart ul{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 0 10px;
+}
+.deleteIcon img{
+    height: 20px;
+    width: 18px;
+}
+.cartDescription button {
+    width: 85%;
+    height: 50px;
+    margin: 20px 30px;
+}
+
+
 .imageContent {
     display: flex;
     margin: 0 15%;
