--- a/style.css
+++ b/style.css
@@ -28,7 +28,10 @@ hr{
 }
 .navMenu ul li {
     margin-left: 50px;
+}
+.navMenu a{
     text-decoration: none;
+    color: #000;
 }
 .hamburger{
     display: none;
@@ -299,12 +302,6 @@ hr{
         width: 70%;
         text-align : center;
         transition: 0.3s;
-    }
-    .navMenu ul{
-        flex-direction: column;
-        gap: 0;
-        z-index: 30;
-
     }
     .navMenu.active{
         left: 0;
