--- a/style.css
+++ b/style.css
@@ -247,24 +247,15 @@ hr{
     color: #fff;
     margin-top: 30px;
 }
-.attribution { 
-    position: absolute;
-    font-size: 11px; 
-    text-align: center; 
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-.attribution a { 
-    color: hsl(228, 45%, 44%); 
-}
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 480px) {
     body {
         text-align: center;
         box-sizing: border-box;
         max-width: 100%;
         margin: 0;
+        padding: 0;
+        overflow: hidden;
     }
     nav{
         width: 100%;
@@ -290,7 +281,8 @@ hr{
     }
     .navPrimary{
         width: 100%;
-        margin: 10px 10px 0;
+        margin: 10px 0 0;
+        padding: 0 5%;
     }
     .navMenu {
         position: fixed;
